@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 35534de9f84f64f935449d86971233da52c1b4c3 ChangeLog
+SHA1 1702ca549265c7fd2d1f1858ff30dd2c82227531 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 03f53e57a0aa95c965447692aa32a6e143462ae1 META.yml
-SHA1 fcad1888e3d3c165941deca551c2e20420a58a53 MYMETA.json
-SHA1 c267cf282b4b8f3d2478bc5f83a3d18b68b6c77a MYMETA.yml
-SHA1 5ce990d858a7a5df5e21968311a679c4f7a6a516 Makefile.PL
+SHA1 13370b00f47ba3a62920def404c0fcce851b2ea6 META.yml
+SHA1 81b1cdd43a60ce5aefb6f2ae2ab7be988e057f0e MYMETA.json
+SHA1 b2fd5ae9a15e16780d54414cf7ecda3056bd1feb MYMETA.yml
+SHA1 4843fad8065aeeba98fc7d4599e9d02d0b339ced Makefile.PL
 SHA1 38228eb2b6a24938b795a73e324f9f51a2a13756 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 6671adf9bf15b05200f2eb0ce2ac8b257a9e6050 bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 1bbeeea11b2a95c5f6c8901bbe7f687787d1368f install_mozrepl_plugin.ahk
-SHA1 fae3825e05563e9d8ad8b439c85b87b2a2e4dde4 lib/Net/FullAuto.pm
+SHA1 9ef1d3d55792c8a089f046fc0c7eed95693b065d lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -50,13 +50,13 @@ SHA1 652187d2e9b92347b5ce4622086b2314ad9962ee lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 35b0f57527b9813d39d63df1e3db84fdc13e9514 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 e0f261e25b722eb59848bcd0a9ee2936a6cc5d87 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 1073ac4fc52fe50332c88767686ba7effa2ddedf lib/Net/FullAuto/FA_Core.pm
+SHA1 ee4a83206e1eaa600e9ab4321d993d034ba97295 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlEMItgACgkQJM3IZYB6aOq1OACdEL9TGul/h2avSAgZfGGDGmj/
-3ngAn2ntWhA3SlLNPOELXG4aIOJ5PsFz
-=l3IP
+iEYEARECAAYFAlEMK8sACgkQJM3IZYB6aOooVgCfa3MiANJibmax+di065Q1WKkv
+UDoAnjdtmcndYSFGXq9y9RJn38wTVV5/
+=tQlR
 -----END PGP SIGNATURE-----
