@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.999984';
+our $VERSION='0.999985';
 
 
 use 5.005;
